--- a/financeweb/templates/viewrevenues1.html
+++ b/financeweb/templates/viewrevenues1.html
@@ -7,13 +7,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Finance Web Application | Sign In </title>
-	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+	<title>Finance Web Application | Project Revenues </title>
+	<link href="/media/css/style.css" rel="stylesheet" type="text/css" media="all" />
 	<!--fonts-->
 		<link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Lato:100,200,300,400,500,600,700,800,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>	
 	<!--//fonts-->
-		<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+		<link href="/media/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 	<!-- for-mobile-apps -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -22,11 +22,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<!-- //for-mobile-apps -->
 	<!-- js -->
-		<script type="text/javascript" src="js/jquery.min.js"></script>
+		<script type="text/javascript" src="/media/js/jquery.min.js"></script>
 	<!-- js -->
 	<!-- start-smooth-scrolling -->
-		<script type="text/javascript" src="js/move-top.js"></script>
-		<script type="text/javascript" src="js/easing.js"></script>
+		<script type="text/javascript" src="/media/js/move-top.js"></script>
+		<script type="text/javascript" src="/media/js/easing.js"></script>
 		<script type="text/javascript">
 			jQuery(document).ready(function($) {
 				$(".scroll").click(function(event){		
@@ -43,16 +43,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <div class="banner pg-head">
 	<div class="container">
 		<div class="logo head">
-			<a href="index.html"><img src="images/2.jpg" alt=""/></a>
+			<a href="index.html"><img src="/media/images/2.jpg" alt=""/></a>
 		</div>
 		<div class="navigation nv-hd">
-				<span class="menu"><img src="images/menu.png" alt=""/></span>
+				<span class="menu"><img src="/media/images/menu.png" alt=""/></span>
 				<ul class="nav1 nl">
 					<li><a href="about.html">ABOUT</a></li>
 					<li><a href="services.html">SERVICES</a></li>
 					<li><a href="portfolio.html">PORTFOLIO</a></li>
 					<li><a href="blog.html">BLOG</a></li>	
-					<li><a href="register.html">REGISTER</a></li>
+					{% if user.is_authenticated %}
+					<li><a href="user_logout">SIGN OUT</a></li>
+					{% else %}
+					<li><a href="register1">REGISTER</a></li>
+					{% endif %}
 					<li><a href="contact.html">CONTACT</a></li>
 				</ul>
 				<!-- script for menu -->
@@ -69,27 +73,66 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</div>
 </div>
 <!-- //banner -->
-<!-- contact-page -->
-<div class="contact">
-	<div class="container">
-		<div class="contact-form">
+<!-- projects -->
 
-			<div class="contact-info">
-			<h2>Fill in <span> the blanks</span></h2>
+<div class="services">
+	<div class="container">
+		<div class="services-info">
+			<a href="{% url 'allprojects1' user.id %}"><h2>YOUR <span>PROJECTS</span></h2></a>
+			<p>
+		</div>
+
+			<div class="blog-sidebar">
+				<h4>{{ project.pname }}</h4>
+				<ul class="category">
+					<li><a href="{% url 'overview_project1' project.id %}">Overview</a></li>
+					<li><a href="{% url 'viewgrossprofit1' project.id %}">Net Profit</a></li>
+					<li><a href="{% url 'viewrevenues1' project.id %}">Revenues</a></li>
+					<li><a href="{% url 'viewexpenses1' project.id %}">Expenses</a></li>
+					<li><a href="#">Milestones</a></li>
+					<li><a href="#">Statistics</a></li>
+					<li><a href="#">Update</a></li>
+				</ul>
 			</div>
 
-			<form method='post' action="user_login">{% csrf_token %}
+
+
+			<div class="contact">
+			<div class="container">
+
+			<div class="contact-form">
+			<div class="contact-info">
+				<h2>Project <span> Revenues</span></h2>
+			</div>
+			
 				<div class="contact-left">
-					<input name="username" type="text" placeholder="Username" required>
-					<input name="password" type="text" placeholder="Password" required>
+
+					{% for r in revenues%}
+						<label>Revenue Name:</label> 
+						<input type="text" value="{{ r.revenue_name }}" disabled>
+						<br>
+						<label>Revenue Amount:</label> 
+						<input type="text" value="${{ r.revenue_amount }}" disabled>						
+						<br>
+						<label>Revenue Date:</label> 
+						<input type="text" value="{{ r.revenue_date }}" disabled>
+						<br></br>
+						<hr>
+						{% endfor %}
+
+
 				</div>
 				<div class="clearfix"></div>
-				<input type="submit" value="SIGN IN">
-			</form>
-		</div>
+		
+			</div>
+			</div>
+			</div>
+
+
 	</div>
 </div>
-<!-- //contact-page -->
+
+
 <!-- footer -->
 <div class="footer">
 	<div class="container">
