--- a/financeweb/templates/about1.html
+++ b/financeweb/templates/about1.html
@@ -7,13 +7,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Avalon a Corporate Category Flat Bootstrap Responsive Website Template | about :: w3layouts</title>
-	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+	<title>Finance Web Application | About</title>
+	<link href="/media/css/style.css" rel="stylesheet" type="text/css" media="all" />
 	<!--fonts-->
 		<link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Lato:100,200,300,400,500,600,700,800,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>	
 	<!--//fonts-->
-		<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+		<link href="/media/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 	<!-- for-mobile-apps -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -22,11 +22,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<!-- //for-mobile-apps -->
 	<!-- js -->
-		<script type="text/javascript" src="js/jquery.min.js"></script>
+		<script type="text/javascript" src="/media/js/jquery.min.js"></script>
 	<!-- js -->
 	<!-- start-smooth-scrolling -->
-		<script type="text/javascript" src="js/move-top.js"></script>
-		<script type="text/javascript" src="js/easing.js"></script>
+		<script type="text/javascript" src="/media/js/move-top.js"></script>
+		<script type="text/javascript" src="/media/js/easing.js"></script>
 		<script type="text/javascript">
 			jQuery(document).ready(function($) {
 				$(".scroll").click(function(event){		
@@ -43,16 +43,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <div class="banner pg-head">
 	<div class="container">
 		<div class="logo head">
-			<a href="index.html"><img src="images/2.jpg" alt=""/></a>
+			<a href="{% url 'home1' %}"><img src="/media/images/2.jpg" alt=""/></a>
 		</div>
 		<div class="navigation nv-hd">
-				<span class="menu"><img src="images/menu.png" alt=""/></span>
+				<span class="menu"><img src="/media/images/menu.png" alt=""/></span>
 				<ul class="nav1 nl">
-					<li><a class="active" href="about.html">ABOUT</a></li>
-					<li><a href="services.html">SERVICES</a></li>
-					<li><a href="portfolio.html">PORTFOLIO</a></li>
+					<li><a class="active" href="{% url 'about1' %}">ABOUT</a></li>
+					<li><a href="{% url 'services1' %}">FEATURES</a></li>
+					<li><a href="{% url 'portfolio1' %}">PORTFOLIO</a></li>
 					<li><a href="blog.html">BLOG</a></li>	
-					<li><a href="register.html">REGISTER</a></li>
+					{% if user.is_authenticated %}
+					<li><a href="{% url 'myaccount1' user.id %}">ACCOUNT</a></li>
+					{% else %}
+					<li><a href="{% url 'register1' %}">REGISTER</a></li>
+					{% endif %}
 					<li><a href="contact.html">CONTACT</a></li>
 				</ul>
 				<!-- script for menu -->
@@ -73,14 +77,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <div class="about">
 	<div class="container">
 		<div class="about-info">
-			<h2>ABOUT</h2>
+			<h2>ABOUT US</h2>
 			<p>FWA stands for Finance Web Application; a web-based application that offers
 			financial support to help start-up businesses manage their financial transactions.</p>
 
 		</div>
 		<div class="about-grids">
 			<div class="about-left">
-				<img src="images/hhh.jpg" alt=""/>
+				<img src="/media/images/hhh.jpg" alt=""/>
 			</div>
 			<div class="about-right">
 				<h3>WHO WE ARE</h3>
