--- a/financeweb/templates/overview_project.html
+++ b/financeweb/templates/overview_project.html
@@ -6,7 +6,7 @@
 	<h1>Overview for {{ cm }}, {{ current_year }}</h1>
 
 
-	<h3>April's Net Profit</h3>
+	<h3>{{ current_month }}'s Net Profit</h3>
 	<label>$ {{ net_profit }}</label>
 
 	<br></br>
