--- a/financeweb/templates/portfolio1.html
+++ b/financeweb/templates/portfolio1.html
@@ -8,12 +8,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html>
 <head>
 	<title>Finance Web Application | Portfolio </title>
-	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="/media/css/style.css" rel="stylesheet" type="text/css" media="all" />
 	<!--fonts-->
 		<link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Lato:100,200,300,400,500,600,700,800,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>	
 	<!--//fonts-->
-		<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+		<link href="/media/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 	<!-- for-mobile-apps -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -22,11 +22,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<!-- //for-mobile-apps -->
 	<!-- js -->
-		<script type="text/javascript" src="js/jquery.min.js"></script>
+		<script type="text/javascript" src="/media/js/jquery.min.js"></script>
 	<!-- js -->
 	<!-- start-smooth-scrolling -->
-		<script type="text/javascript" src="js/move-top.js"></script>
-		<script type="text/javascript" src="js/easing.js"></script>
+		<script type="text/javascript" src="/media/js/move-top.js"></script>
+		<script type="text/javascript" src="/media/js/easing.js"></script>
 		<script type="text/javascript">
 			jQuery(document).ready(function($) {
 				$(".scroll").click(function(event){		
@@ -43,16 +43,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <div class="banner pg-head">
 	<div class="container">
 		<div class="logo head">
-			<a href="index.html"><img src="images/2.jpg" alt=""/></a>
+			<a href="{% url 'home1' %}"><img src="/media/images/2.jpg" alt=""/></a>
 		</div>
 		<div class="navigation nv-hd">
-				<span class="menu"><img src="images/menu.png" alt=""/></span>
+				<span class="menu"><img src="/media/images/menu.png" alt=""/></span>
 				<ul class="nav1 nl">
-					<li><a href="about.html">ABOUT</a></li>
-					<li><a href="services.html">SERVICES</a></li>
-					<li><a class="active" href="portfolio.html">PORTFOLIO</a></li>
+					<li><a href="{% url 'about1' %}">ABOUT</a></li>
+					<li><a href="{% url 'services1' %}">FEATURES</a></li>
+					<li><a class="active" href="{% url 'portfolio1' %}">PORTFOLIO</a></li>
 					<li><a href="blog.html">BLOG</a></li>	
-					<li><a href="register.html">REGISTER</a></li>
+					{% if user.is_authenticated %}
+					<li><a href="{% url 'myaccount1' user.id %}">ACCOUNT</a></li>
+					{% else %}
+					<li><a href="{% url 'register1' %}">REGISTER</a></li>
+					{% endif %}
 					<li><a href="contact.html">CONTACT</a></li>
 				</ul>
 				<!-- script for menu -->
@@ -90,10 +94,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="portfolio app mix_all" data-cat="app" style="display: inline-block; opacity: 1;">
 							<div class="portfolio-wrapper">		
 								<a href="images/k1.jpg" class="b-link-stripe b-animate-go   swipebox"  title="">
-								<img class="img-responsive" src="images/k1.jpg" />
+								<img class="img-responsive" src="/media/images/k1.jpg" />
 								<div class="b-wrapper">
 								<h2 class="b-animate b-from-left    b-delay03 ">
-									<img class="img-responsive" src="images/e.png" class="zoom" alt=""/>
+									<img class="img-responsive" src="/media/images/e.png" class="zoom" alt=""/>
 								</h2>
 								
 								</div></a>
@@ -102,10 +106,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="portfolio card mix_all" data-cat="card" style="display: inline-block; opacity: 1;">
 							<div class="portfolio-wrapper">		
 								<a href="images/k2.jpg" class="b-link-stripe b-animate-go   swipebox"  title="">
-								<img class="img-responsive" src="images/k2.jpg" />
+								<img class="img-responsive" src="/media/images/k2.jpg" />
 								<div class="b-wrapper">
 								<h2 class="b-animate b-from-left    b-delay03 ">
-								<img class="img-responsive" src="images/e.png" class="zoom" alt=""/></h2>
+								<img class="img-responsive" src="/media/images/e.png" class="zoom" alt=""/></h2>
 								
 								</div></a>
 							</div>
@@ -114,10 +118,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="portfolio card mix_all" data-cat="card" style="display: inline-block; opacity: 1;">
 							<div class="portfolio-wrapper">		
 								<a href="images/k4.jpg" class="b-link-stripe b-animate-go   swipebox"  title="">
-								<img class="img-responsive" src="images/k4.jpg" />
+								<img class="img-responsive" src="/media/images/k4.jpg" />
 								<div class="b-wrapper">
 								<h2 class="b-animate b-from-left    b-delay03 ">
-								<img class="img-responsive" src="images/e.png" class="zoom" alt=""/></h2>
+								<img class="img-responsive" src="/media/images/e.png" class="zoom" alt=""/></h2>
 								
 								</div></a>
 							</div>
@@ -126,10 +130,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="portfolio app mix_all" data-cat="app" style="display: inline-block; opacity: 1;">
 							<div class="portfolio-wrapper">		
 								<a href="images/k6.jpg" class="b-link-stripe b-animate-go  swipebox"  title="">
-								<img class="img-responsive" src="images/k6.jpg" alt=""/>
+								<img class="img-responsive" src="/media/images/k6.jpg" alt=""/>
 								<div class="b-wrapper">
 								<h2 class="b-animate b-from-left    b-delay03 ">
-									<img class="img-responsive" src="images/e.png" class="zoom" alt=""/>
+									<img class="img-responsive" src="/media/images/e.png" class="zoom" alt=""/>
 								</h2>
 								</div></a>
 							</div>
@@ -138,10 +142,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="portfolio card mix_all" data-cat="card" style="display: inline-block; opacity: 1;">
 							<div class="portfolio-wrapper">		
 								<a href="images/k7.jpg" class="b-link-stripe b-animate-go   swipebox"  title="">
-								<img class="img-responsive" src="images/k7.jpg" />
+								<img class="img-responsive" src="/media/images/k7.jpg" />
 								<div class="b-wrapper">
 								<h2 class="b-animate b-from-left    b-delay03 ">
-								<img class="img-responsive" src="images/e.png" class="zoom" alt=""/></h2>
+								<img class="img-responsive" src="/media/images/e.png" class="zoom" alt=""/></h2>
 								
 								</div></a>
 							</div>
@@ -150,10 +154,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="portfolio app mix_all" data-cat="app" style="display: inline-block; opacity: 1;">
 							<div class="portfolio-wrapper">		
 								<a href="images/k8.jpg" class="b-link-stripe b-animate-go   swipebox"  title="">
-								<img class="img-responsive" src="images/k8.jpg" />
+								<img class="img-responsive" src="/media/images/k8.jpg" />
 								<div class="b-wrapper">
 								<h2 class="b-animate b-from-left    b-delay03 ">
-									<img class="img-responsive" src="images/e.png" class="zoom" alt=""/>
+									<img class="img-responsive" src="/media/images/e.png" class="zoom" alt=""/>
 								</h2>
 								</div></a>
 							</div>
@@ -162,10 +166,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="portfolio card mix_all" data-cat="card" style="display: inline-block; opacity: 1;">
 							<div class="portfolio-wrapper">		
 								<a href="images/k9.jpg" class="b-link-stripe b-animate-go  swipebox"  title="">
-								<img class="img-responsive" src="images/k9.jpg" alt=""/>
+								<img class="img-responsive" src="/media/images/k9.jpg" alt=""/>
 								<div class="b-wrapper">
 								<h2 class="b-animate b-from-left    b-delay03 ">
-									<img class="img-responsive" src="images/e.png" class="zoom" alt=""/>
+									<img class="img-responsive" src="/media/images/e.png" class="zoom" alt=""/>
 								</h2>
 								</div></a>
 							</div>
@@ -174,10 +178,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="portfolio app mix_all" data-cat="app" style="display: inline-block; opacity: 1;">
 							<div class="portfolio-wrapper">		
 								<a href="images/k11.jpg" class="b-link-stripe b-animate-go   swipebox"  title="">
-								<img class="img-responsive" src="images/k11.jpg" alt=""/>
+								<img class="img-responsive" src="/media/images/k11.jpg" alt=""/>
 								<div class="b-wrapper">
 								<h2 class="b-animate b-from-left    b-delay03 ">
-									<img class="img-responsive" src="images/e.png" class="zoom" alt=""/>
+									<img class="img-responsive" src="/media/images/e.png" class="zoom" alt=""/>
 								</h2>
 								</div></a>
 							</div>
@@ -187,15 +191,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 		
 	</div>
-			<link rel="stylesheet" href="css/swipebox.css">
-				<script src="js/jquery.swipebox.min.js"></script> 
+			<link rel="stylesheet" href="/media/css/swipebox.css">
+				<script src="/media/js/jquery.swipebox.min.js"></script> 
 					<script type="text/javascript">
 						jQuery(function($) {
 							$(".swipebox").swipebox();
 						});
 					</script>
 				<!-- Portfolio Ends Here -->
-				<script type="text/javascript" src="js/jquery.mixitup.min.js"></script>
+				<script type="text/javascript" src="/media/js/jquery.mixitup.min.js"></script>
 					<script type="text/javascript">
 					$(function () {
 						var filterList = {
